add white text color in btn a link

--- a/index.html
+++ b/index.html
@@ -101,8 +101,14 @@
               <p class="separator">After experience volunteering as a web designer in the past, I grew interested in software development. Now, I excited to start a full-time role in the field.</p>
 
             </div>
-
-          </div>
+            <div class="col-lg-5 text-center">  
+              <p>
+                <button  class="btn btn-outline-primary">
+                  <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/e/2PACX-1vTH9TREx-9C96Uhid-dNmITXB4UF2-TiUnCHRUPqJoKePdNE4eThpyyrphzjne9LQ/pub"><i class="bi bi-card-text"></i> resume </a>
+                </button>
+              <p>
+            </div>
+          </div>  
         </div>
       </div>
     </div><!-- End About Section -->
